--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,86 @@
-/* You can add global styles to this file, and also import other style files */
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 30px;
+  background-color: palegreen;
+  font-family: Arial, Helvetica, sans-serif;
+  .toDo {
+    padding-right: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+  }
+  .completed {
+    padding-left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+  }
+}
+
+// todo.component.html
+
+.loading {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  position: fixed;
+  top: 30%;
+  left: 40%;
+
+  .label {
+    margin-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .btnSend {
+    border-radius: 50%;
+    margin-left: 10px;
+    padding: 10px 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: green;
+      color: white;
+      transform: scale(1.1);
+    }
+  }
+}
+.lista {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  position: fixed;
+  top: 40%;
+  left: 40%;
+  list-style: none;
+
+  .li {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 5px;
+    font-weight: 800;
+  }
+  .btnRemove {
+    border-radius: 50%;
+    padding: 10px 10px;
+    margin-left: 10px;
+    background-color: red;
+    font-weight: 800;
+    cursor: pointer;
+  }
+}
