--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,11 +76,41 @@
     font-weight: 800;
   }
   .btnRemove {
-    border-radius: 50%;
+    border-radius: 10%;
     padding: 10px 10px;
     margin-left: 10px;
-    background-color: red;
     font-weight: 800;
     cursor: pointer;
+    &:hover {
+      background-color: green;
+      color: white;
+      transform: scale(1.1);
+    }
+  }
+}
+
+.lista2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  font-size: 1rem;
+  list-style: none;
+  .li {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 5px;
+    font-weight: 800;
+  }
+}
+
+.back {
+  border-radius: 10%;
+  padding: 10px 10px;
+  margin-left: 10px;
+  font-weight: 800;
+  cursor: pointer;
+  &:hover {
+    background-color: green;
+    color: white;
+    transform: scale(1.1);
   }
 }
