--- a/src/app/components/completed/completed.component.html
+++ b/src/app/components/completed/completed.component.html
@@ -1,10 +1,12 @@
-<div *ngIf="loading">Caricamento...</div>
-<div *ngIf="!loading">
-  <h2>🥕 Aggiunti al carrello</h2>
-  <ul class="lista2">
-    <li class="li" *ngFor="let info of infos">
-      <span>{{ getEmojiForFood(info.text) }}{{ info.text }} </span>
-    </li>
-  </ul>
-  <button class="back" routerLink="/todos">Ordina ancora</button>
+<div class="container2">
+  <div *ngIf="loading">Caricamento...</div>
+  <div *ngIf="!loading">
+    <h2>🛒 Aggiunti al carrello</h2>
+    <ul class="lista2">
+      <li class="li" *ngFor="let info of infos">
+        <span>{{ getEmojiForFood(info.text) }}{{ info.text }} </span>
+      </li>
+    </ul>
+    <button class="back" routerLink="/todos">Ordina ancora</button>
+  </div>
 </div>
