--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,22 +5,62 @@
   align-items: center;
   padding: 5px;
   font-size: 30px;
-  background-color: palegreen;
+  background-color: #c38b52;
   font-family: Arial, Helvetica, sans-serif;
   .toDo {
     padding-right: 20px;
     cursor: pointer;
     text-decoration: none;
-    color: black;
+    color: #415420;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
   .completed {
     padding-left: 20px;
     cursor: pointer;
     text-decoration: none;
-    color: black;
+    color: #415420;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
 
+.container {
+  background: linear-gradient(
+    45deg,
+    #f0d8aa 0%,
+    #f0d8aa 49%,
+    #e1c17f 50%,
+    #f0d8aa 51%,
+    #f0d8aa 100%
+  );
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Arial", sans-serif;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.container2 {
+  background: linear-gradient(
+    45deg,
+    #f0d8aa 0%,
+    #f0d8aa 49%,
+    #e1c17f 50%,
+    #f0d8aa 51%,
+    #f0d8aa 100%
+  );
+  height: 100vh;
+  margin: 0;
+  font-family: "Arial", sans-serif;
+}
 // todo.component.html
 
 .loading {
@@ -46,36 +86,19 @@
   .label {
     margin-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    color: #2d3a16;
   }
-  .btnSend {
-    border-radius: 50%;
-    margin-left: 10px;
-    padding: 10px 10px;
-    cursor: pointer;
+  .input-bar {
+    border-radius: 5px;
+    box-shadow: 5px -2px 5px grey;
     &:hover {
-      background-color: green;
-      color: white;
-      transform: scale(1.1);
+      background-color: rgb(220, 186, 186);
+    }
+    &:focus {
+      background-color: palegreen;
     }
   }
-}
-.lista {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  position: fixed;
-  top: 40%;
-  left: 40%;
-  list-style: none;
-
-  .li {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 5px;
-    font-weight: 800;
-  }
-  .btnRemove {
+  .btnSend {
     border-radius: 10%;
     padding: 10px 10px;
     margin-left: 10px;
@@ -88,11 +111,44 @@
     }
   }
 }
+.lista {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  font-size: 1rem;
+  position: fixed;
+  top: 40%;
+  left: 40%;
+  list-style: none;
+
+  .li {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 5px;
+    font-weight: 800;
+  }
+  .btnRemove,
+  .btnRemove2 {
+    border-radius: 10%;
+    padding: 10px 10px;
+    margin-left: 10px;
+    font-weight: 800;
+    cursor: pointer;
+    &:hover {
+      background-color: green;
+      color: white;
+      transform: scale(1.1);
+    }
+  }
+  .btnRemove2 {
+    padding: 10px 14px;
+  }
+}
 
 .lista2 {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   font-size: 1rem;
   list-style: none;
   .li {
